tests/trybuild-failures/not_comparison.rs
use assertify::assertify;

fn main() {
    assertify!(1 + 2);
    unreachable!();
}
